--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,8 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "redis": "^4.6.6"
   }
 }
